project list created

--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -12,9 +12,9 @@ import Contactform from "@components/contactform.astro";
       email, or call us.
     </p>
     <div class="mt-5">
-      <div class="flex items-center mt-2 space-x-2 text-gray-600">
+      <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
         <span>Address: <br />3473 Durello Cir, Rancho Cordova, CA 95670</span>
-      </div>
+      </div> -->
       <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
         <a href="mailto:hello@astroshipstarter.com">Email</a>
       </div> -->
