--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -12,7 +12,7 @@ const features = [
   },
   {
     img: "/star-compressed.png",
-    title: "16 Years in Business",
+    title: "20+ Years in Business",
     link: false,
     description:
       "Proven Industry Workers: Leading the Way in Contracting Services for Over a Decade",
@@ -28,15 +28,14 @@ const features = [
     img: "/bzscore-compressed.jpeg",
     title: "112 BuildZoom Score",
     link: false,
-    description:
-      "97th Percentile above other contractors in California. Their BuildZoom score of 112 ranks in the top 3% of 336,931 California licensed contractors",
+    description: "Top 3% of California licensed contractors",
   },
   {
     img: "/paper-compressed.png",
-    title: "127 Permitted Projects",
+    title: "Permit Ready Plans",
     link: false,
     description:
-      "Building permit records show that California Design Solutions has worked on 127 permitted projects",
+      "We create and execute permit-ready plans that can be submitted for approval.",
   },
   {
     img: "/verified-compressed.jpeg",
@@ -48,10 +47,10 @@ const features = [
 ];
 ---
 
-<!-- <div class="flex flex-col gap-3 mx-auto max-w-4xl m-16 text-center">
-  <h2 class="font-bold text-3xl text-gray-800">Why Us</h2>
-</div> -->
-<div class="grid sm:grid-cols-1 md:grid-cols-3 auto-rows-fr p-4 gap-4">
+<div class="flex flex-col gap-3 mx-auto max-w-4xl m-16 text-center">
+  <h2 class="font-bold text-3xl text-gray-800">Why Choose Us</h2>
+</div>
+<div class="grid sm:grid-cols-1 md:grid-cols-3 auto-rows-fr p-8 gap-4">
   {
     features.map((item) => (
       <>
