--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Testimonials from "@components/testimonials.astro";
 import Link from "@components/ui/link.astro";
+import ProjectComponent from "@components/projectComponent.astro";
 ---
 
 <Layout title="">
@@ -31,6 +32,7 @@ import Link from "@components/ui/link.astro";
     </Hero>
     <Features />
     <Services />
+    <ProjectComponent />
     <Testimonials />
     <Cta />
   </Container>
