--- a/src/pages/reviews.astro
+++ b/src/pages/reviews.astro
@@ -6,62 +6,8 @@ import Sectionhead from "@components/sectionhead.astro";
 import Button from "@components/ui/button.astro";
 import Contactform from "@components/contactform.astro";
 import Review from "@components/review.astro";
-
-const reviews = [
-    {
-        stars: "5",
-        date: "12/21/2020",
-        name: "Stephanie H.",
-        location: "Folsom, CA",
-        title: "Remodel or Renovate One or More Rooms",
-        description:
-            "CDS was wonderful to work with. Ben and Yoni are meticulous and efficient in getting the job done. They are flexible in last minute changes and was still able to complete the work in a timely fashion. I would work with them again.",
-    },
-    {
-        stars: "5",
-        date: "6/30/2020",
-        name: "Stephanie J.",
-        location: "Carmichael, CA",
-        title: "Remodel a Bathroom",
-        description:
-            "I was impressed by the conscientiousness of the company and the workmanship was excellent. The project took a long time to complete but covid got in the way and it was worth the wait.",
-    },
-    {
-        stars: "5",
-        date: "4/29/2020",
-        name: "Terry C.",
-        location: "Davis, CA",
-        title: "Remodel a Kitchen",
-        description: "",
-    },
-    {
-        stars: "5",
-        date: "2/20/2019",
-        name: "Vikki D.",
-        location: "",
-        title: "Remodel or Renovate One or More Rooms",
-        description:
-            "We had a very positive experience, our remodel was better than our expectation.",
-    },
-    {
-        stars: "5",
-        date: "2/15/2019",
-        name: "Michael W.",
-        location: "Sacramento, CA",
-        title: "Remodel or Renovate One or More Rooms",
-        description:
-            "California Design Solutions has skilled craftsmen and proven expertise in kitchen/bathroom remodeling, cabinets, tile, wall/ceiling texturing, electrical, plumbing, carpentry, and interior painting. We have used their services multiple times. The owners, Ben and Yanis, are particularly good at offering suggestions - we included a couple of them (pantry expansion and wall sconces) during the major remodel of our house.",
-    },
-    {
-        stars: "4.5",
-        date: "2/4/2019",
-        name: "Donita S.",
-        location: "Folsom, CA",
-        title: "Remodel or Renovate One or More Rooms",
-        description:
-            "We loved the entire crew. All of his men were highly professional and did great work. Worked long hours. It took extra time to wrap up the job with some final items but were very responsive. We would recommend them to anyone. Would hire them again.",
-    },
-];
+import { ha_reviews } from "content/_ha_reviews";
+import { hz_reviews } from "content/_hz_reviews";
 ---
 
 <Layout title="Reviews">
@@ -72,8 +18,40 @@ const reviews = [
         </Sectionhead>
 
         <div class="flex flex-col mx-auto max-w-4xl mt-16 px-5">
+            <span class="my-8 text-slate-600"
+                >Reviews from <a
+                    href="https://www.houzz.com/professionals/kitchen-and-bath-designers/west-designs-full-service-k-b-designer-builder-pfvwus-pf~1799045938?"
+                    target="_blank"
+                    class="text-blue-700 underline"
+                    style="color: #4DBC15">Houzz</a
+                >
+            </span>
             {
-                reviews.map((item) => (
+                hz_reviews.map((item) => (
+                    <div class="bg-gray-50">
+                        <Review
+                            stars={item.stars}
+                            date={item.date}
+                            name={item.name}
+                            location={item.location}
+                            title={item.title}
+                            description={item.description}
+                        />
+                    </div>
+                ))
+            }
+        </div>
+        <div class="flex flex-col mx-auto max-w-4xl mt-8 px-5">
+            <span class="mb-8 text-slate-600"
+                >Reviews from <a
+                    href="https://www.homeadvisor.com/rated.CaliforniaDesign.27068314.html"
+                    target="_blank"
+                    class="text-blue-700 underline"
+                    style="color: #FF5532">HomeAdvisor</a
+                ></span
+            >
+            {
+                ha_reviews.map((item) => (
                     <Review
                         stars={item.stars}
                         date={item.date}
@@ -84,13 +62,6 @@ const reviews = [
                     />
                 ))
             }
-            <span class="mt-8 text-slate-600"
-                >Reviews from <a
-                    href="https://www.homeadvisor.com/rated.CaliforniaDesign.27068314.html"
-                    target="_blank"
-                    class="text-blue-700 underline">HomeAdvisor</a
-                ></span
-            >
         </div>
     </Container>
 </Layout>
