--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -7,7 +7,7 @@
     Please keep this backlink on your website if possible.
     or Purchase a commercial license from https://web3templates.com
   -->
-  <p class="text-center text-xs text-slate-500 mt-1">
+  <!-- <p class="text-center text-xs text-slate-500 mt-1">
     Made with <a
       href="https://web3templates.com"
       target="_blank"
@@ -15,5 +15,5 @@
       class="hover:underline">
       Astro
     </a>
-  </p>
+  </p> -->
 </footer>
