--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -28,7 +28,7 @@ const menuitems = [
     class="flex flex-col lg:flex-row justify-between items-center my-5 px-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-md md:text-lg"
+        <a href="/" class="text-md md:text-lg tracking-tighter"
           ><span class="font-bold text-slate-800">CaliforniaDesign</span><span
             class="text-slate-500">Solutions</span
           >
