--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import ProjectComponent from "@components/projectComponent.astro";
       <Link
         href="/contact"
         class="flex gap-1 items-center justify-center"
+        style="transparent"
         rel="noopener">
         Schedule an Appointment
       </Link>
