--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -50,11 +50,11 @@ const features = [
 <div class="flex flex-col gap-3 mx-auto max-w-4xl m-16 text-center">
   <h2 class="font-bold text-3xl text-gray-800">Why Choose Us</h2>
 </div>
-<div class="grid sm:grid-cols-1 md:grid-cols-3 auto-rows-fr p-8 gap-4">
+<div class="grid sm:grid-cols-1 md:grid-cols-3 auto-rows-fr p-8 gap-8">
   {
     features.map((item) => (
       <>
-        <div class="flex border p-4 rounded-lg shadow-sm hover:shadow-slate-300 transition">
+        <div class="flex border p-4 rounded-lg shadow-xl shadow-slate-200">
           <div class="flex gap-4 items-start">
             <div>
               <div class="flex items-center">
