--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -17,6 +17,10 @@ const menuitems = [
     path: "/reviews",
   },
   {
+    title: "Blog",
+    path: "/blog",
+  },
+  {
     title: "Contact",
     path: "/contact",
   },
