--- a/src/components/projectComponent.astro
+++ b/src/components/projectComponent.astro
@@ -1,41 +1,73 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import { projectList } from "../content/_projects";
+import { getCollection } from "astro:content";
 
-const slicedProjects = projectList.slice(0, 6);
+const projectEntires = await getCollection("project", ({ data }) => {
+  return data;
+});
+
+let projectEntiresSliced = projectEntires.slice(0, 6);
+
+// Sort
+//projectEntiresSliced.sort((a, b) => a.data.title.localeCompare(b.data.title));
 ---
 
 <div class="m-8 md:m-16">
-    <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-        {
-            slicedProjects.map((item) => (
-                <div class="p-4 border rounded h-fit hover:-translate-y-1 transition">
-                    <a href={item.link}>
-                        <Picture
-                            src={item.img}
-                            alt={item.alt}
-                            widths={[200, 400, 600]}
-                            sizes="(max-width: 800px) 100vw, 800px"
-                            formats={["avif", "jpeg", "png", "webp"]}
-                            aspectRatio="2:1"
-                            class="rounded w-full h-full object-cover overflow-hidden mb-2"
-                        />
-                        <h3 class="mt-4 text-md md:text-lg font-bold">
-                            {item.title}
-                        </h3>
-                        <div class="flex justify-between text-xs md:text-sm">
-                            <p>{item.location}</p>
-                            <p>{item.date}</p>
-                        </div>
-                    </a>
-                </div>
-            ))
-        }
-    </div>
-    <div class="my-16 flex w-full items-center justify-center">
-        <a
-            class="text-base leading-relaxed text-slate-900 border w-fit px-8 py-2 bg-slate-100 rounded"
-            href="/projects">View All Projects</a
-        >
-    </div>
+  <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+    {
+      projectEntiresSliced.map((blogPostEntry) => (
+        <a href={`/projects/${blogPostEntry.slug}`}>
+          <div class="p-4 border rounded h-fit hover:-translate-y-1 transition">
+            <Picture
+              src={blogPostEntry.data.image.src}
+              alt={blogPostEntry.data.image.alt}
+              widths={[200, 400, 600]}
+              sizes="(max-width: 800px) 100vw, 800px"
+              formats={["avif", "jpeg", "png", "webp"]}
+              aspectRatio="2:1"
+              class="rounded w-full h-full object-cover overflow-hidden mb-2"
+            />
+            <h3 class="mt-4 text-md md:text-lg font-bold">
+              {blogPostEntry.data.title}
+            </h3>
+            <div class="flex justify-between text-xs md:text-sm">
+              <p>{blogPostEntry.data.publishDate}</p>
+            </div>
+          </div>
+        </a>
+      ))
+    }
+    <!-- {
+     
+        // slicedProjects.map((item) => (
+        //     <div class="p-4 border rounded h-fit hover:-translate-y-1 transition">
+        //         <a href={item.link}>
+        //             <Picture
+        //                 src={item.img}
+        //                 alt={item.alt}
+        //                 widths={[200, 400, 600]}
+        //                 sizes="(max-width: 800px) 100vw, 800px"
+        //                 formats={["avif", "jpeg", "png", "webp"]}
+        //                 aspectRatio="2:1"
+        //                 class="rounded w-full h-full object-cover overflow-hidden mb-2"
+        //             />
+        //             <h3 class="mt-4 text-md md:text-lg font-bold">
+        //                 {item.title}
+        //             </h3>
+        //             <div class="flex justify-between text-xs md:text-sm">
+        //                 <p>{item.location}</p>
+        //                 <p>{item.date}</p>
+        //             </div>
+        //         </a>
+        //     </div>
+        // ))
+      
+    } -->
+  </div>
+  <div class="my-16 flex w-full items-center justify-center">
+    <a
+      class="text-base leading-relaxed text-slate-900 border w-fit px-8 py-2 bg-slate-100 rounded"
+      href="/projects">View All Projects</a
+    >
+  </div>
 </div>
