--- a/src/components/testimonials.astro
+++ b/src/components/testimonials.astro
@@ -35,10 +35,6 @@ const reviews = [
     <div
       class="flex flex-col gap-3 mx-auto max-w-4xl mt-8 text-center items-center justify-center">
       <h2 class="font-bold text-3xl text-gray-800">Customer Testimonials</h2>
-      <a
-        class="text-base leading-relaxed text-slate-900 border px-8 py-2 bg-slate-100 rounded"
-        href="/reviews">See All Reviews</a
-      >
     </div>
     <div class="mt-12">
       <ul class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
@@ -81,6 +77,13 @@ const reviews = [
           ))
         }
       </ul>
+    </div>
+    <div
+      class="flex flex-col gap-3 mx-auto max-w-4xl mt-8 text-center items-center justify-center">
+      <a
+        class="text-base leading-relaxed text-slate-900 border px-8 py-2 bg-slate-100 rounded"
+        href="/reviews">See All Reviews</a
+      >
     </div>
   </div>
 </section>
