--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,14 +1,20 @@
 ---
 import { getCollection } from "astro:content";
-import { Picture } from "@astrojs/image/components";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import ProjectComponent from "@components/projectComponent.astro";
+import { Picture } from "@astrojs/image/components";
+// import { projectList } from "../content/_projects";
 
-const publishedBlogEntries = await getCollection("photos", ({ data }) => {
+// Filter blog entries with 'draft: false' & date before current date
+const projectEntires = await getCollection("project", ({ data }) => {
   return data;
 });
+
+// Sort content entries by publication date
+// projectEntires.sort(function (a, b) {
+//   return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+// });
 ---
 
 <Layout title="Projects">
@@ -18,7 +24,71 @@ const publishedBlogEntries = await getCollection("photos", ({ data }) => {
       <Fragment slot="desc">A collection of our projects.</Fragment>
     </Sectionhead>
     <main class="mt-16 px-5">
-      <ProjectComponent />
+      <div class="m-8 md:m-16">
+        <ul class="grid gap-16 max-w-4xl mx-auto">
+          {
+            projectEntires.map((blogPostEntry, index) => (
+              <li>
+                <a href={`/projects/${blogPostEntry.slug}`}>
+                  <div class="grid md:grid-cols-2 gap-5 md:gap-10 items-center">
+                    <Picture
+                      src={blogPostEntry.data.image.src}
+                      alt={blogPostEntry.data.image.alt}
+                      sizes="(max-width: 800px) 100vw, 800px"
+                      widths={[200, 400, 800]}
+                      aspectRatio="16:9"
+                      background="#ffffff"
+                      fit="cover"
+                      position="center"
+                      loading={index <= 2 ? "eager" : "lazy"}
+                      decoding={index <= 2 ? "sync" : "async"}
+                      class="w-full rounded-md"
+                    />
+                    <div>
+                      <h2 class="text-3xl font-semibold leading-snug tracking-tight mt-1 ">
+                        {blogPostEntry.data.title}
+                      </h2>
+
+                      <div class="flex gap-2 mt-3">
+                        <span class="text-gray-400">• </span>
+                        <span class="text-gray-400">
+                          {blogPostEntry.data.publishDate}
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </li>
+            ))
+          }
+        </ul>
+        <!-- <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+          {
+            projectList.map((item) => (
+              <div class="p-4 border rounded h-fit hover:-translate-y-1 transition">
+                <a href={item.link}>
+                  <Picture
+                    src={item.img}
+                    alt={item.alt}
+                    widths={[200, 400, 600]}
+                    sizes="(max-width: 800px) 100vw, 800px"
+                    formats={["avif", "jpeg", "png", "webp"]}
+                    aspectRatio="2:1"
+                    class="rounded w-full h-full object-cover overflow-hidden mb-2"
+                  />
+                  <h3 class="mt-4 text-md md:text-lg font-bold">
+                    {item.title}
+                  </h3>
+                  <div class="flex justify-between text-xs md:text-sm">
+                    <p>{item.location}</p>
+                    <p>{item.date}</p>
+                  </div>
+                </a>
+              </div>
+            ))
+          }
+        </div> -->
+      </div>
     </main>
   </Container>
 </Layout>
