--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -22,7 +22,7 @@ const { Content } = await entry.render();
     <div class="mx-4 md:mx-auto">
       <div class="mx-auto max-w-3xl mt-14">
         <span
-          class="text-blue-400 uppercase tracking-wider text-sm font-medium">
+          class="text-gray-600 uppercase tracking-wider text-sm font-medium">
           {entry.data.category}
         </span>
         <h1
