--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -45,7 +45,7 @@ publishedBlogEntries.sort(function (a, b) {
                     class="w-full rounded-md"
                   />
                   <div>
-                    <span class="text-blue-400 uppercase tracking-wider text-sm font-medium">
+                    <span class="text-gray-600 uppercase tracking-wider text-sm font-medium">
                       {blogPostEntry.data.category}
                     </span>
 
