--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -6,7 +6,7 @@ import Contactform from "@components/contactform.astro";
 
 <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-32 px-5">
   <div>
-    <h2 class="font-medium text-2xl text-gray-800">Contact Us</h2>
+    <h2 class="font-bold text-3xl text-gray-800">Contact Us</h2>
     <p class="text-lg leading-relaxed text-slate-500 mt-3">
       Want to work with us? We are here to help. Fill out the form, send us an
       email, or call us.
@@ -18,8 +18,12 @@ import Contactform from "@components/contactform.astro";
       <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
         <a href="mailto:hello@astroshipstarter.com">Email</a>
       </div> -->
-      <div class="flex items-center mt-2 space-x-2 text-gray-600">
+      <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
         <a href="tel:+1 (916) 612 9218">Phone: <br />+1 916-612-9218</a>
+      </div> -->
+      <div class="flex flex-col gap-4 mt-2 text-gray-600">
+        <a href="tel:+1 (916) 612 9218">Phone: +1 916-612-9218</a>
+        <p>Email: cdsremodeling@gmail.com</p>
       </div>
     </div>
   </div>
