--- a/src/components/services.astro
+++ b/src/components/services.astro
@@ -4,24 +4,27 @@ import { Picture } from "@astrojs/image/components";
 const servicesCollection = [
   {
     name: "Designs",
-    description: "information",
+    description: "",
     img: {
-      src: "/unsplash/b.jpg",
+      src: "https://st.hzcdn.com/simgs/0a21c9b600600af3_8-5662/modern-bathroom.jpg",
       alt: "Image of bathroom remodel",
     },
   },
   {
     name: "Major Renovation",
-    description: "information",
+    description: "",
     img: {
-      src: "/unsplash/o.jpg",
+      src: "https://st.hzcdn.com/simgs/c901844400d2bfb2_8-0674/transitional-bathroom.jpg",
       alt: "Image of interior major renovation",
     },
   },
   {
     name: "Project Management",
-    description: "information",
-    img: { src: "/unsplash/k.jpg", alt: "Image of kitchen remodel" },
+    description: "",
+    img: {
+      src: "https://st.hzcdn.com/simgs/a80146dd00d4c4dc_8-5089/basement.jpg",
+      alt: "Image of sketches",
+    },
   },
 ];
 ---
