--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -27,11 +27,13 @@ import Button from "@components/ui/button.astro";
           satisfaction, sets us apart as the go-to choice for all your
           renovation needs.
         </p>
-        <img class="my-4 rounded" src="/unsplash/k.jpg" />
+        <br />
+        <a href="/contact"> <Button>Work with us</Button></a>
+        <!-- <img class="my-4 rounded" src="/unsplash/k.jpg" /> -->
         <br />
       </div>
       <Licenses />
-      <a href="/contact"> <Button>Work with us</Button></a>
+      <!-- <a href="/contact"> <Button>Work with us</Button></a> -->
     </div>
   </Container>
 </Layout>
