--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -21,12 +21,13 @@ publishedBlogEntries.sort(function (a, b) {
     <Sectionhead>
       <Fragment slot="title">Our Blog</Fragment>
       <Fragment slot="desc">
-        We write about building startups and thoughts going on our mind.
+        We write about building, design, and thoughts going on our mind.
       </Fragment>
     </Sectionhead>
     <main class="mt-16 mx-4 md:mx-auto">
       <ul class="grid gap-16 max-w-4xl mx-auto">
-        {
+        <h1 class="w-full text-center">Under Construction</h1>
+        <!-- {
           publishedBlogEntries.map((blogPostEntry, index) => (
             <li>
               <a href={`/blog/${blogPostEntry.slug}`}>
@@ -69,7 +70,7 @@ publishedBlogEntries.sort(function (a, b) {
               </a>
             </li>
           ))
-        }
+        } -->
       </ul>
     </main>
   </Container>
