--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,6 +48,22 @@ const makeTitle = title
         },
       }}
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11379373550"></script>
+    <script>
+      // @ts-ignore
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        // @ts-ignore
+        dataLayer.push(arguments);
+      }
+      // @ts-ignore
+      gtag("js", new Date());
+      // @ts-ignore
+      gtag("config", "AW-11379373550");
+    </script>
   </head>
   <body>
     <Navbar />
