--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,19 +1,5 @@
 <footer class="my-20">
   <p class="text-center text-sm text-slate-500">
-    {new Date().getFullYear()} California Design Solutions.
+    &copy; {new Date().getFullYear()} California Design Solutions.
   </p>
-  <!--
-    Can we ask you a favor 🙏
-    Please keep this backlink on your website if possible.
-    or Purchase a commercial license from https://web3templates.com
-  -->
-  <!-- <p class="text-center text-xs text-slate-500 mt-1">
-    Made with <a
-      href="https://web3templates.com"
-      target="_blank"
-      rel="noopener"
-      class="hover:underline">
-      Astro
-    </a>
-  </p> -->
 </footer>
