--- a/src/components/review.astro
+++ b/src/components/review.astro
@@ -7,26 +7,40 @@ const {
     location = "",
     title = "",
     description = "",
+    bgColor = "",
     ...rest
 } = Astro.props;
+
+const nameIcon = name.split(" ").map((item: string) => item[0].toUpperCase()).join("").slice(0, 2);
+
+const colorArray = ["#DBD7D2",
+                    "#C0C0C0", 
+                    "#BEBFC5", 
+                    "#B2BEB5", 
+                    "#E5E4E2"];
+
 ---
 
 <hr />
 <div {...rest} class="flex flex-col gap-1 p-4 rounded shadow-sm">
     <div>
         <div class="flex gap-4 text-xs md:text-base items-center">
+            <div class="w-8 h-8 text-black text-sm rounded-full flex items-center justify-center" style={`background-color: ${bgColor}`}>
+            {nameIcon}
+            </div>
+            
+            <span class="font-bold">
+                {name}
+            </span>
             <div class="flex gap-1 items-center text-center pr-1">
                 <img src={Star} />
                 {stars}
             </div>
-            <span class="font-bold">
-                {name}
-            </span>
-            <span class="text-slate-900">
+            <span class="text-slate-500">
                 {location}
             </span>
         </div>
-        <span class="text-slate-700 my-4">{date}</span>
+        <!-- <span class="text-slate-700 my-4">{date}</span> -->
     </div>
     <div class="text-cyan-500">{title}</div>
     <div class="text-slate-500">{description}</div>
