--- a/src/pages/reviews.astro
+++ b/src/pages/reviews.astro
@@ -34,6 +34,7 @@ import { hz_reviews } from "content/_hz_reviews";
               date={item.date}
               name={item.name}
               description={item.description}
+              bgColor = {item.bgColor}
             />
           </div>
         ))
@@ -57,6 +58,7 @@ import { hz_reviews } from "content/_hz_reviews";
             location={item.location}
             title={item.title}
             description={item.description}
+            bgColor = {item.bgColor}
           />
         ))
       }
